<resources>
    <string name="location_enable">Please enable your Location service and make sure it should be in high accuracy.</string>
    <string name="change_network">Please make sure Location service should be in high accuracy.</string>
    <string name="app_buildversion">Version</string>
    <string name="english">English</string>
    <string name="russian">русский</string>
    <string name="arabic">العربية</string>
    <string name="turkey">Türk</string>
    <string name="frence">French</string>
    <string name="german">Deutsch</string>
    <string name="app_name">Cabi</string>
    <string name="app_namemanifest">Cabi Partner</string>
    <string name="connect_error">Network Connection Error!</string>
    <string name="c_tryagain"> Try again! </string>
    <string name="back">Back</string>
    <string name="nodata">No data found</string>
    <string name="spanish">Español</string>
    <string name="check_net_connection">Check your internet connection</string>
    <string name="gps_is_settings">GPS is settings</string>
    <string name="gps_is_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="location_disable">Location Services Disabled</string>
    <string name="enable">Enable</string>
    <string name="menu_settings">Settings</string>
    <string name="cancel"> Cancel </string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="phone"> Mobile Number </string>
    <string name="password"> Password </string>
    <string name="forgotpswd"> Forgot Password ? </string>
    <string name="done"> DONE </string>
    <string name="signin">Sign In</string>
    <string name="enter_your_mobile_number">Please enter your mobile number</string>
    <string name="check_internet">Please Take New Ride</string>
    <string name="t_ok"> OK </string>
    <string name="t_success"> SUCCESS </string>
    <string name="enter_mobile_number">Please enter your mobile number</string>
    <string name="enter_the_password">Please enter your password</string>
    <string name="pwd_min">Password should be minimum 6 characters</string>
    <string name="confirmlogout">Are you sure you want to logout?</string>
    <string name="confirm_complete">Are you sure you want to complete trip?</string>
    <string name="confirm_complete_delivery">Are you sure you want to complete delivery?</string>
    <string name="trackmytrip">Track My Trip</string>
    <string name="trackmytrip_delivery">Track My Delivery</string>
    <string name="m_me"> Profile </string>
    <string name="myjobs">My Jobs</string>
    <string name="locating_you">Locating you...!</string>
    <string name="currenttxt">YOUR CURRENT LOCATION</string>
    <string name="statistics">Statistics</string>
    <string name="total">Total</string>
    <string name="excuse_me_brevity"> Excuse my brevity,Sign up with the referral code </string>
    <string name="and_earn"> and earn </string>
    <string name="download_from">. Download the app from:</string>
    <string name="reject"> Rejected </string>
    <string name="timedriven"> Time Driven </string>
    <string name="earning">Today Earning  </string>
    <string name="language_settings">Language settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancelled">Cancelled</string>
    <string name="totalearning">Total Earning</string>
    <string name="totaltrip">Total Trip</string>
    <string name="totaltrip_delivery">Total Delivery</string>
    <string name="m_logout">Log Out</string>
    <string name="submit"> Submit </string>
    <string name="pwd_same">Password and confirm password does not match</string>
    <string name="cancell"> Cancel </string>
    <string name="image_failed">Please select image from valid path(Gallery folder)</string>
    <string name="first"> First Name </string>
    <string name="last"> Last Name </string>
    <string name="email"> Email </string>
    <string name="mobile"> Mobile </string>
    <string name="confimpswd"> Confirm Password </string>
    <string name="bankstmt">Bank A/C is used to pay out commission</string>
    <string name="bankcomm"><nowiki>*</nowiki></string>
    <string name="no_changes">No changes made</string>
    <string name="my_status">My Location</string>
    <string name="you_are_here">You are here!</string>
    <string name="current_location">Current Location</string>
    <string name="trip_history">Trip History</string>
    <string name="trip_history_delivery">Delivery History</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_details_delivery">Delivery Details</string>
    <string name="past_booking">Past Bookings</string>
    <string name="name">Name</string>
    <string name="accept_time">30 SECONDS LEFT TO ACCEPT</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="minutestxt">Minute</string>
    <string name="mins">Min(s)</string>
    <string name="secondstxt">Seconds</string>
    <string name="accept"> ACCEPT </string>
    <string name="decline"> DECLINE </string>
    <string name="Trip_Request">Trip Request</string>
    <string name="Trip_Request_delivery">Delivery Request</string>
    <string name="seconds_to_left">LEFT TO ACCEPT</string>
    <string name="device_not_support_map">Device does not support map version!</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="stop_waiting">Stop Waiting</string>
    <string name="start_waiting">Start Waiting</string>
    <string name="heading_ongoing">Waiting for Passenger</string>
    <string name="pass_onboard">Start Trip</string>
    <string name="pass_onboard_delivery">Start Delivery</string>
    <string name="ongoing_journey">Trip in Progress</string>
    <string name="ongoing_journey_delivery">Delivery in Progress</string>
    <string name="waiting_time_txt">Waiting Time</string>
    <string name="duration_time_txt">Duration</string>
    <string name="arvd_destination">End Trip</string>
    <string name="arvd_destination_delivery">End Delivery</string>
    <string name="ive_arrived">I\'ve arrived</string>
    <string name="you_are_in_trip">You\'re already in a trip!</string>
    <string name="you_are_in_trip_delivery">You\'re already in a Delivery!</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="pickuploc"> Pick up Location </string>
    <string name="droploc"> Drop Location </string>
    <string name="picklocation"> Pick up Location </string>
    <string name="notes">Landmark</string>
    <string name="you">You</string>
    <string name="waiting_time">Waiting Time Cost</string>
    <string name="total_km">Total KM </string>
    <string name="actual_distance">Total Distance</string>
    <string name="waiting_cost"> Waiting Time Cost </string>
    <string name="Tax"> Tax</string>
    <string name="tax_percent"> %) </string>
    <string name="total_amount">Total</string>
    <string name="paymentby"> PAYMENT BY </string>
    <string name="cash"> Cash </string>
    <string name="card"> Card </string>
    <string name="uncard"> New Card </string>
    <string name="fare_calculator">Fare Calculator</string>
    <string name="wallet_amount">Wallet Amount Used</string>
    <string name="pay_amount">Amount to Pay</string>
    <string name="waiting_payment">Please Wait for passenger payment confirmation.</string>
    <string name="trip_completed">Trip Completed</string>
    <string name="trip_completed_delivery">Delivery Completed</string>
    <string name="trip_id">Trip Id</string>
    <string name="trip_id_delivery">Delivery Id</string>
    <string name="p_congrats"> Payment Completed </string>
    <string name="p_main"> Back To Home </string>
    <string name="p_cardno">Card Number **** **** **** **** </string>
    <string name="p_expiry">Expiry MM/YY </string>
    <string name="p_cvv">CVV</string>
    <string name="invite_sms">SMS</string>
    <string name="invite_email">Email</string>
    <string name="invite_fb">Facebook</string>
    <string name="invite_whatsapp">Whats App</string>
    <string name="invite_twitter">Twitter</string>
    <string name="invite_sharevia">Share Via</string>
    <string name="invite_frdrides">When a driver rides the trip with your code</string>
    <string name="invite_youearn">You Earn</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="sendmail">Send mail</string>
    <string name="there_is_no_email_client_installed">There is no email client installed</string>
    <string name="add">Add</string>
    <string name="amount"> Amount </string>
    <string name="payment"> Payment </string>
    <string name="t_passname">Passenger Name</string>
    <string name="t_pickloc">Pick up Location</string>
    <string name="t_picktime">Pick up Time</string>
    <string name="t_droploc">Drop Location</string>
    <string name="t_droptime">Drop Time</string>
    <string name="t_distance">Distance</string>
    <string name="t_tripduration">Trip Duration</string>
    <string name="t_tripduration_delivery">Delivery Duration</string>
    <string name="heading_payuncard">Pay with new card</string>
    <string name="ent_ccard_no">Please enter your credit card number</string>
    <string name="ent_chk_ccard">Kindly check your credit card number</string>
    <string name="ent_exp_date">Please enter expiry date</string>
    <string name="ent_exp_year_gt">Expired year should be equal and greater than current year</string>
    <string name="ent_cvv">Please enter your cvv number</string>
    <string name="ent_chk_cvv">Kindly check your cvv number</string>
    <string name="message"> Message </string>
    <string name="ok">OK</string>
    <string name="select_language">Select Language</string>
    <string name="discount">Discount</string>
    <string name="trip_fare">Trip Fare</string>
    <string name="trip_fare_delivery">Delivery Fare</string>
    <string name="enter_the_first_name">Please enter your first name</string>
    <string name="enter_the_last_name">Please enter your last name</string>
    <string name="enter_the_card_number">Please enter your card number</string>
    <string name="enter_the_valid_card_number">Please enter valid card number</string>
    <string name="enter_the_expiry_date">Please enter your expiry date</string>
    <string name="enter_the_email">Please enter your Email</string>
    <string name="enter_the_valid_email">Please enter valid Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_in_going_trip">Are you sure want to cancel the trip?</string>
    <string name="cancel_in_going_trip_delivery">Are you sure want to cancel the Delivery?</string>
    <string name="please_click_back_again_exit">Please click back again to exit</string>
    <string name="m_upcoming">Confirmed Trips</string>
    <string name="m_upcoming_delivery">Confirmed Deliveries</string>
    <string name="m_statistics"> Statistics </string>
    <string name="m_assigned"> Assigned Taxi </string>
    <string name="m_ongoing"> Ongoing Trip </string>
    <string name="m_ongoing_delivery"> Ongoing Delivery </string>
    <string name="upload_your_image"> Upload your File </string>
    <string name="file_upload">Upload Files?</string>
    <string name="choose">Choose File</string>
    <string name="remarks">Remarks</string>
    <string name="f_timetoreach"> Time to Reach </string>
    <string name="f_forgotpwd"> Forgot Password </string>
    <string name="c_oldpwd"> Old Password </string>
    <string name="c_newpwd"> New Password </string>
    <string name="c_conpwd"> Confirm Password </string>
    <string name="c_chnpwd"> Change Password </string>
    <string name="no_data">No data found</string>
    <string name="up_coming">On Going</string>
</resources>