<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_paylay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbg"
    android:orientation="vertical" >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:id="@+id/signup_title"/>

    <EditText
        android:id="@+id/cardEdt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/p_cardno"
        android:inputType="phone"
        android:maxLength="20"
        android:gravity="left"
        android:padding="10dp"
        android:textColor="@color/textviewcolor_dark" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cccccc" />

    <TextView
        android:id="@+id/expireEdt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:gravity="left"

        android:hint="@string/p_expiry"
        android:padding="10dp"
        android:textColor="@color/textviewcolor_dark" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/cvvEdt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/p_cvv"
        android:inputType="number"
        android:gravity="left"
        android:maxLength="4"
        android:padding="10dp"
        android:textColor="@color/textviewcolor_dark" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cccccc" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_marginLeft="05dp"
        android:layout_marginRight="05dp"
        android:text="@string/done"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/doneBtn"/>

</LinearLayout>