<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="false"
    android:background="@color/transparent"
    android:focusableInTouchMode="false"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/curvedbg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/message"
                style="@android:style/TextAppearance.Large"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/f_forgotpwd"
                android:textColor="@color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/appbg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/f_timetoreach"
                android:visibility="gone" />

            <EditText
                android:id="@+id/forgotmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/enter_your_mobile_number"
                android:maxLength="13"
                android:padding="10dp"
                android:layout_marginTop="05dp"
                android:singleLine="true"
                android:textColor="@color/block"
                android:textColorHint="@color/hintcolor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linebottom_light" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"


                android:orientation="horizontal">

                <Button
                    android:id="@+id/okbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t_ok"

                    android:layout_marginLeft="03dp"
                    android:layout_marginBottom="01dp"
                    android:textColor="@color/button_color" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/linebottom_light" />

                <Button
                    android:id="@+id/cancelbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cancell"
                    android:layout_marginBottom="01dp"
                    android:layout_marginRight="03dp"
                    android:textColor="@color/block" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>