<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mystatus_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/slide_lay"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/tool_bar_color">

        <TextView
            android:id="@+id/slideImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_green_to_white"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@drawable/text_color_black_to_white"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/backbtn"
            android:gravity="left"
            android:padding="5dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/headerTxt"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/app_name"
            android:visibility="gone"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/headicon"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/headerTxt"
            android:gravity="center"
            android:src="@drawable/headicon"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btn_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/shiftbg"
            android:gravity="center"
            android:maxWidth="120dp"
            android:minHeight="30dp"
            android:minWidth="70dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="online"
            android:textSize="12sp"
            android:textColor="@color/white" />



    </RelativeLayout>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/shadow"
        android:visibility="visible"
        android:foreground="@drawable/background_shadow">
        <!-- YOUR STUFF HERE -->
    </FrameLayout>


    <include
        layout="@layout/home_top_navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            layout="@layout/map_lay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/device_not_support_map"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/remarks"
                android:gravity="top|left"
                android:hint="@string/remarks"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="6"
                android:minLines="4"
                android:padding="10dp"
                android:scrollbars="vertical" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:background="@drawable/draw_black_bg"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    android:textColor="@color/block"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/currentlocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/dot"
                    android:background="@drawable/border_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:text="@string/current_location"
                    android:textSize="12sp" />
            </LinearLayout>

        </RelativeLayout>

       <include layout="@layout/include_bottom_home"/>
    </FrameLayout>

</LinearLayout>
