<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/appbg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/actionbar"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txt_up_coming"
                style="@style/enterTxt"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/up_coming"
                android:textAllCaps="false"
                android:textColor="@color/button_accept" />

            <View
                android:id="@+id/upcoming_underline"
                android:layout_height="2.5dp"
                android:layout_width="fill_parent"
                android:background="@color/button_accept" />

            </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/linebottom_dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/actionbar"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txt_past_booking"
                style="@style/enterTxt"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/past_booking"
                android:textAllCaps="false" />

            <View
                android:id="@+id/past_underline"
                android:layout_height="2.5dp"
                android:layout_width="fill_parent"
                android:background="@color/linebottom_light" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/nodataTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/black"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></android.support.v7.widget.RecyclerView>

</LinearLayout>


